fixed image position

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+ihe-wallpapers (0.0.2ubuntu1) precise; urgency=low
+
+  * 
+
+ -- I Heart Engineering <code@iheartengineering.com>  Thu, 03 Jan 2013 13:16:25 -0500
+
+ihe-wallpapers (0.0.2) precise; urgency=low
+
+  * Fixed image
+
+ -- I Heart Engineering <code@iheartengineering.com>  Thu, 03 Jan 2013 12:43:52 -0500
+
 ihe-wallpapers (0.0.1ubuntu1) precise; urgency=low
 
   * 
