Forked for ROS Hydro

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,28 +1,28 @@
-ihe-wallpapers (0.0.3) precise; urgency=low
+ihe-wallpapers-hydro (0.0.3) precise; urgency=low
 
   * fixed image position
 
  -- I Heart Engineering <code@iheartengineering.com>  Thu, 03 Jan 2013 13:17:02 -0500
 
-ihe-wallpapers (0.0.2ubuntu1) precise; urgency=low
+ihe-wallpapers-hydro (0.0.2ubuntu1) precise; urgency=low
 
   * 
 
  -- I Heart Engineering <code@iheartengineering.com>  Thu, 03 Jan 2013 13:16:25 -0500
 
-ihe-wallpapers (0.0.2) precise; urgency=low
+ihe-wallpapers-hydro (0.0.2) precise; urgency=low
 
   * Fixed image
 
  -- I Heart Engineering <code@iheartengineering.com>  Thu, 03 Jan 2013 12:43:52 -0500
 
-ihe-wallpapers (0.0.1ubuntu1) precise; urgency=low
+ihe-wallpapers-hydro (0.0.1ubuntu1) precise; urgency=low
 
   * 
 
  -- I Heart Engineering <code@iheartengineering.com>  Thu, 03 Jan 2013 10:18:04 -0500
 
-ihe-wallpapers (0.0.1) precise; urgency=low
+ihe-wallpapers-hydro (0.0.1) precise; urgency=low
 
   * Init!
 
