--- a/README
+++ b/README
@@ -1,2 +1,2 @@
-This is the debian package for IHE wallpapers.
+This is the debian package for IHE wallpapers for TurtleBots running ROS Hydro.
 It installs the wallpapers and sets the default greeter and desktop background.
