--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+ihe-wallpapers-hydro (0.0.4~1.gbp6d5f64) UNRELEASED; urgency=low
+
+  ** SNAPSHOT build @6d5f645f33b6b5c64852e30df9a980bdec78095a **
+
+  [ lucid ]
+  * UNRELEASED
+
+  [ I Heart Engineering ]
+
+ -- I Heart Engineering <code@iheartengineering.com>  Fri, 23 Aug 2013 21:07:23 -0400
+
 ihe-wallpapers-hydro (0.0.3) precise; urgency=low
 
   * fixed image position
